--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply font-poppins;
+  }
+  h1 {
+    @apply font-poppins;
+  }
+  p {
+    @apply font-poppins;
+  }
+  button {
+    @apply font-poppins;
+  }
+  input {
+    @apply font-poppins;
+  }
+}
+
+@layer components {
+  .banner-bg-image {
+    background-image: url("./assets/banner/search-bg.png");
+  }
+  .card {
+    width: 100%;
+    padding: 8px;
+    border-radius: 12px;
+  }
+}
